--- a/app/locales/zh.json
+++ b/app/locales/zh.json
@@ -7,5 +7,60 @@
     "title": "欢迎来到我们的网站",
     "description": "这是我们服务的简要描述。",
     "footerNote": "感谢您的访问！"
+  },
+    "common": {
+    "action": "操作",
+    "add": "新增",
+    "addSuccess": "添加成功",
+    "backToHome": "返回首页",
+    "batchDelete": "批量删除",
+    "cancel": "取消",
+    "close": "关闭",
+    "check": "勾选",
+    "expandColumn": "展开列",
+    "columnSetting": "列设置",
+    "config": "配置",
+    "confirm": "确认",
+    "delete": "删除",
+    "deleteSuccess": "删除成功",
+    "confirmDelete": "确认删除吗？",
+    "edit": "编辑",
+    "warning": "警告",
+    "error": "错误",
+    "index": "序号",
+    "keywordSearch": "请输入关键词搜索",
+    "logout": "退出登录",
+    "logoutConfirm": "确认退出登录吗？",
+    "lookForward": "敬请期待",
+    "modify": "修改",
+    "modifySuccess": "修改成功",
+    "noData": "无数据",
+    "operate": "操作",
+    "pleaseCheckValue": "请检查输入的值是否合法",
+    "refresh": "刷新",
+    "reset": "重置",
+    "search": "搜索",
+    "switch": "切换",
+    "tip": "提示",
+    "trigger": "触发",
+    "update": "更新",
+    "updateSuccess": "更新成功",
+    "userCenter": "个人中心",
+    "yesOrNo": {
+      "yes": "是",
+      "no": "否"
+    }
+  },
+    "icon": {
+    "themeConfig": "主题配置",
+    "themeSchema": "主题模式",
+    "lang": "切换语言",
+    "fullscreen": "全屏",
+    "fullscreenExit": "退出全屏",
+    "reload": "刷新页面",
+    "collapse": "折叠菜单",
+    "expand": "展开菜单",
+    "pin": "固定",
+    "unpin": "取消固定"
   }
 }
